@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.979 2009-02-05 22:26:28 castaglia Exp $
+$Id: NEWS,v 1.980 2009-02-05 22:33:56 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,8 @@ CVS
 - Bug 2894 - Deprecate the AnonymousGroup directive.
 - Bug 3123 - Use PQescapeStringConn() rather than PQescapeString().
 - Bug 3133 - mod_facts should advertise TVFS support in the FEAT response.
+- Bug 3128 - mod_sql_sqlite should use transactions for INSERT/UPDATE
+  statements.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
